examples/Passing/Binary/bracket_add_edge.c
int main(){return(+6);}
