examples/Failing/Variables/fail_add4.c
int main() {
    int a = 6;
    6 += a;
    return a;
}
